Add option to avoid use of PIL.

--- a/src/default.cfg
+++ b/src/default.cfg
@@ -138,6 +138,13 @@ externalViewer = 0
 # Use upper case labels to show continuations in pattern search?
 uppercaseLabels = 1
 #
+# Allow the use of the Python Imaging Library (PIL)?
+# This is needed for the nicer stones, but causes problems on some systems
+# (notably Mac OS).
+#
+# "auto" means: use PIL, unless system is Mac OS X
+# 0 means: do not use PIL; 1 means: use PIL
+use_PIL = auto
 #
 # ------------ pattern search -------------
 smartFixedColor = 1
