Remove app files; allow choice of theme by option; update documentation.

--- a/src/default.cfg
+++ b/src/default.cfg
@@ -33,6 +33,8 @@ tagAsPro = Never
 algo_hash_full = 1
 algo_hash_corner = 0
 #
+# ------------- theme ---------------------------
+theme = default
 # ------------- fonts ---------------------------
 # This subsection contains the settings of various fonts. All font settings
 # have two or three parts, the font name (e.g. "Helvetica", "Times",
