Add option to maximize window on startup (Windows only).

--- a/src/default.cfg
+++ b/src/default.cfg
@@ -127,6 +127,7 @@ onlyOneMouseButton = ""
 maxLengthSearchesStack = 30
 doNotChangeWindowTitle = 0
 showCurrMoveVar = 0
+maximize_window = 0
 #
 removeCarriageReturn = 1
 #
