--- a/src/default.cfg
+++ b/src/default.cfg
@@ -35,6 +35,7 @@ algo_hash_corner = 0
 #
 # ------------- theme ---------------------------
 theme = default
+language = ""
 # ------------- fonts ---------------------------
 # This subsection contains the settings of various fonts. All font settings
 # have two or three parts, the font name (e.g. "Helvetica", "Times",
