Date information for continuations; improved date profile in kombilo.py.

--- a/src/default.cfg
+++ b/src/default.cfg
@@ -154,9 +154,14 @@ use_PIL = auto
 # will be a pane in the left hand column).
 search_history_as_tab = 1
 #
-# ------------ pattern search -------------
+# ------------ pattern search, date profile ---
 smartFixedColor = 1
 jumpToMatchVar = 1
+date_profile_from = 1960
+date_profile_to = 2012
+date_profile_chunk_size = 6
+statistics_by_date = 0
+continuations_sort_crit = earliest
 #
 # ------------- internal -------------------
 # viewer
