Add option for maximizing external viewer.

--- a/src/default.cfg
+++ b/src/default.cfg
@@ -129,6 +129,7 @@ maxLengthSearchesStack = 30
 doNotChangeWindowTitle = 0
 showCurrMoveVar = 0
 maximize_window = 0
+maximize_viewer = 0 # if games are opened in Kombilo's external viewer, the viewer's window will be maximized (Windows only)
 #
 removeCarriageReturn = 1
 #
