--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-syntax: glob
-
 *~
 *.swp
 *.pyc
@@ -20,5 +18,5 @@ src/libkombilo.py
 src/dist
 src/build
 lang/*/LC_MESSAGES/*.mo
-.ropeproject
+TODO
 
