Use BooleanVar instead of IntVar for boolean Tk variables.

--- a/src/default.cfg
+++ b/src/default.cfg
@@ -24,7 +24,7 @@ recProcess = 1
 strictDuplCheck = 0
 #
 # Put variations into the database?
-processVariations = 1
+processVariations = True
 #
 # Tag games as "professional games"? Options are "Never", "All games", and
 # "All games with p-rank players".
