--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-Jinja2==2.6
-Pillow==1.7.6
-Pygments==1.4
-Sphinx==1.1.3
-configobj==4.7.2
-docutils==0.8.1
-pyparsing==1.5.6
-Pmw==1.3.2
+Jinja2==2.8
+MarkupSafe==0.23
+Pillow==3.3.1
+Pmw==2.0.1
+Pygments==2.1.3
+Sphinx==1.4.8
+argparse==1.2.1
+configobj==5.0.6
+docutils==0.12
+pyparsing==2.1.9
+six==1.10.0
+wsgiref==0.1.2
+setuptools==28.0.0
