--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.swp
 *.pyc
 *.so
+.cache
 installer
 doc/_build/*
 sgf/*
@@ -17,6 +18,7 @@ src/kombilo.cfg
 src/libkombilo.py
 src/dist
 src/build
+src/tests/db/*.d*
 lang/*/LC_MESSAGES/*.mo
 TODO
 
