Misc. changes to improve look on HiDPI displays
(and to make things generally more flexible).
Plus some small fixes.

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -36,6 +36,7 @@ algo_hash_corner = 0
 # ------------- theme ---------------------------
 theme = default
 language = ""
+scaling = -1
 # ------------- fonts ---------------------------
 # This subsection contains the settings of various fonts. All font settings
 # have two or three parts, the font name (e.g. "Helvetica", "Times",
@@ -48,9 +49,9 @@ statFontStyle = ""
 statFontSizeSmall = 7
 #
 # font for the text box displaying comments in the SGF file
-commentfont = Helvetica
-commentfontSize = 11
-commentfontStyle = ""
+commentFont = Helvetica
+commentFontSize = 11
+commentFontStyle = ""
 #
 # used for labels on the board
 labelFont = Helvetica
@@ -173,6 +174,7 @@ sashPos = 379
 dataWindowGeometryK = 58|%120|%217|%335|%434
 windowGeomK = 1300x757+235+231
 sashPosK = 330|%825
+sashPosKS = 530|%750
 #
 # -------- END OF OPTIONS SECTION ----------------
 #
