Improve handling of option variables
- Add edit window for advanced options
- Clean up some options and configuration file handling
- (Remains to do: clean up font handling)

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -3,25 +3,40 @@ version = kombilo0.8
 datapath = ""
 sgfpath = ""
 [options]
+# Options marked as "editable" can be edited via the "Edit advanced options"
+# menu command.  For those options, a label can be explicitly listed (# label:);
+# otherwise the variable name is used.  If a tuple of values is specified, then
+# only those values are accepted (-- marks an empty string).  If INT or BOOLEAN
+# is specified, then only integers or boolean values, respectively, are
+# accepted. Otherwise, arbitrary strings are accepted. All other comment lines
+# are assembled and displayed as "help_text".
+#
+# With '# section: SECTION TITLE' you can start a new 'section'.
+#
+# The labels given as '# label:' are translated, as well as the help texts and
+# section titles; the values are not translated since this would almost never
+# make sense and add too much complexity.
+#
+# See below for examples.
 #
 # ----------- processing ----------------------
 # default options relevant for building a database from a collection of SGF
 # files.
 # They can be changed in the "Edit DB list" window.
 #
-# Accept duplicates? (0 = no, 1 = yes)
-acceptDupl = 1
+# Accept duplicates?
+acceptDupl = True
 #
-storeDatabasesSeparately = 0
+storeDatabasesSeparately = False
 whereToStoreDatabases = ""
 #
 # recursively process all games in subfolders
-recProcess = 1
+recProcess = True
 #
 # Check for duplicates strictly (i.e. by comparing hashes for the final
 # positions of the games), or loosely, (i.e. comparing only the symmetrized
 # Dyer signatures)?
-strictDuplCheck = 0
+strictDuplCheck = False
 #
 # Put variations into the database?
 processVariations = True
@@ -30,52 +45,89 @@ processVariations = True
 # "All games with p-rank players".
 tagAsPro = Never
 #
-algo_hash_full = 1
-algo_hash_corner = 0
+algo_hash_full = True
+algo_hash_corner = False
 #
 # ------------- theme ---------------------------
 theme = default
 language = ""
-scaling = -1
-# ------------- fonts ---------------------------
-# This subsection contains the settings of various fonts. All font settings
-# have two or three parts, the font name (e.g. "Helvetica", "Times",
-# "Courier", the font size, and possibly the font style (e.g. '', 'bold')
+# section: Fonts
 #
-# fonts for the pattern search statistics
+# editable
+# label: Font for search statistics
+# E.g., Helvetica, Times, Courier
 statFont = Helvetica
+# editable
+# values: INT
+# label: Font size
 statFontSize = 8
+# editable
+# label: Font style
+# values: --, bold
 statFontStyle = ""
+# editable
+# label: Small font size
+# values: INT
 statFontSizeSmall = 7
 #
-# font for the text box displaying comments in the SGF file
+# editable
+# label: Font for comment text
 commentFont = Helvetica
+# editable
+# values: INT
+# label: Font size
 commentFontSize = 11
+# editable
+# label: Font style
+# values: --, bold
 commentFontStyle = ""
 #
-# used for labels on the board
+# editable
+# label: Font for board labels
 labelFont = Helvetica
+# editable
+# label: Font size
+# values: INT
 labelFontSize = 5
+# editable
+# label: Font style
+# values: --, bold
 labelFontStyle = bold
 #
-# The font used in the text editor where positions (or SGF files) are
+# editable
+# label: Monospace font
+# Used in the text editor that positions, search results or SGF files are
 # "exported" to.
 exportFont = Courier
+# editable
+# label: Font size
+# values: INT
 exportFontSize = 10
+# editable
+# label: Font style
+# values: --, bold
 exportFontStyle = ""
 #
-# Some more fonts ....
-guessmodeFont = Helvetica
+# editable
+# label: Font size for guess mode
+# values: INT
 guessmodeFontSize = 16
 #
-# --------------- colors -----------------
+# section: Colors
 #
-# Color used for labels with black and white continuations
+# editable
+# label: Label color
+# Color used for labels with black and white continuations,
+# e.g., grey50 (the default), green, blue, ..., #eeeeee, ...
 labelColor = grey50
 #
+# editable
+# label: Black tenuki
 # Color of "black tenuki" hits in statistics bar chart
 Btenuki = grey45
 #
+# editable
+# label: White tenuki
 # Color of "white tenuki" hits in statistics bar chart
 Wtenuki = grey77
 #
@@ -86,26 +138,29 @@ Wtenuki = grey77
 sortCriterion = 6
 #
 # Should the date be displayed in the game list? (0 = no, 1 = yes)
-showDate = 1
+showDate = True
 #
 # Should the file name be displayed in the game list? (0 = no, 1 = yes)
-showFilename = 0
+showFilename = False
 #
 # Reverse order? (E.g., if ordered by date, this means: show most recent
 # games first) (0 = no, 1 = yes)
-sortReverse = 1
+sortReverse = True
 #
 # Show tag abbreviations (as [CS], e.g.) in game list? (0 = no, 1 = yes)
-showTags = 0
+showTags = False
 #
 # ---------------- board -----------------
 #
-# Fuzzy stone placement (i.e. randomly place stones one pixel away from the
-# intersection points)? ((0 = no, 1 = yes)
-fuzzy = 0
-#
 # Mark position of next move (by a circle)?
-showNextMoveVar = 0
+showNextMoveVar = False
+#
+# section: Board
+# editable
+# label: Fuzzy stone placement
+# values: BOOLEAN
+# Randomly place stones one pixel away from the intersection points.
+fuzzy = False
 #
 # behaviour of Ctrl-click (on the board)
 # options are "DEL ST" = delete stone, "ABC" = place upper case letter
@@ -114,51 +169,90 @@ showNextMoveVar = 0
 labelType = DEL ST
 #
 # Show board coordinates?
-showCoordinates = 0
+showCoordinates = False
 #
 # Show position of mouse pointer by a shaded stone when over the board?
-shadedStoneVar = 1
+# editable
+# label: Shaded stone pointer
+# values: BOOLEAN
+shadedStoneVar = True
 #
-# ----------- various other options -------
-# 
+# section: Various options
+# editable
+# label: Icon size
+# values: INT
+scaling = -1
+# editable
+# label: Only one mouse button
+# If you have no right mouse button, set this to "<M2-Button-1>;<M2-B1-Motion>"
+# to select the search region with Alt+Left-click. (In theory, you could also
+# set this to a different pair of Tkinter mouse bindings, separated by
+# a semi-colon.)
 onlyOneMouseButton = ""
+# editable
+# label: Search history
+# Number of pattern searches stored in the search history window. Decrease if your
+# computer has little RAM.
 maxLengthSearchesStack = 30
-doNotChangeWindowTitle = 0
-showCurrMoveVar = 0
-maximize_window = 0
-maximize_viewer = 0 # if games are opened in Kombilo's external viewer, the viewer's window will be maximized (Windows only)
+# editable
+# values: BOOLEAN
+# Avoid having players of current game shown as window title.
+# label: Preserve window title
+doNotChangeWindowTitle = False
+showCurrMoveVar = False
+# editable
+# values: BOOLEAN
+# label: Maximize window
+# (Windows only)
+maximize_window = False
+# editable
+# values: BOOLEAN
+# label: Maximize ext'l viewer
+# Maximize the window of the external SGF viewer (Windows only; not applicable for alternative viewers).
+maximize_viewer = False
 #
-removeCarriageReturn = 1
+# editable
+# label: Remove carriage return
+# values: BOOLEAN
+# Remove CR character when writing out SGF files. (This relates to different
+# operating systems encoding line breaks in different ways.)
+removeCarriageReturn = True
 #
 # Ask for confirmation before deleting files/discarding unsaved changes?
-confirmDelete = 0
+confirmDelete = False
 #
-altViewerVar2 = ""
-altViewerVar1 = ""
-externalViewer = 0
-#
+# editable
+# values: BOOLEAN
+# label: Use upper-case labels
 # Use upper case labels to show continuations in pattern search?
-uppercaseLabels = 1
-#
-# Allow the use of the Python Imaging Library (PIL)?
-# This is needed for the nicer stones, but causes problems on some systems
-# (notably Mac OS).
-#
-# "auto" means: use PIL, unless system is Mac OS X
-# 0 means: do not use PIL; 1 means: use PIL
-use_PIL = auto
-#
+uppercaseLabels = True
 # Put search history frame as a tab in right hand column? (Otherwise it
 # will be a pane in the left hand column).
-search_history_as_tab = 1
+# editable
+# label: Search history as tab
+# values: BOOLEAN
+search_history_as_tab = True
+# editable
+# label: Use external SGF viewer
+# values: BOOLEAN
+# Opens games for viewing in a new window.
+externalViewer = False
+# editable
+# label: Command to launch viewer
+# Command to launch an alternative SGF viewer
+altViewerVar1 = ""
+# editable
+# label: Command line options
+# Use %f as a placeholder for the filename.
+altViewerVar2 = ""
 #
 # ------------ pattern search, date profile ---
-smartFixedColor = 1
-jumpToMatchVar = 1
+smartFixedColor = True
+jumpToMatchVar = True
 date_profile_from = 1960
 date_profile_to = 2016
 date_profile_chunk_size = 6
-statistics_by_date = 0
+statistics_by_date = False
 continuations_sort_crit = earliest
 #
 # ------------- internal -------------------
