Improve font handling

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -54,64 +54,57 @@ language = ""
 # section: Fonts
 #
 # editable
-# label: Font for search statistics
+# label: Standard font
 # E.g., Helvetica, Times, Courier
-statFont = Helvetica
+standardFont = Helvetica
 # editable
 # values: INT
 # label: Font size
-statFontSize = 8
+standardFontSize = 9
 # editable
-# label: Font style
-# values: --, bold
-statFontStyle = ""
-# editable
-# label: Small font size
-# values: INT
-statFontSizeSmall = 7
+# label: Font weight
+# values: normal, bold
+standardFontWeight = normal
 #
 # editable
-# label: Font for comment text
-commentFont = Helvetica
+# label: Small font for search statistics, etc.
+smallFont = Helvetica
 # editable
 # values: INT
 # label: Font size
-commentFontSize = 11
+smallFontSize = 8
 # editable
-# label: Font style
-# values: --, bold
-commentFontStyle = ""
+# label: Font weight
+# values: normal, bold
+smallFontWeight = normal
 #
 # editable
 # label: Font for board labels
 labelFont = Helvetica
 # editable
 # label: Font size
+# (Will be scaled according to board size.)
 # values: INT
 labelFontSize = 5
 # editable
-# label: Font style
-# values: --, bold
-labelFontStyle = bold
+# label: Font weight
+# values: normal, bold
+labelFontWeight = bold
 #
 # editable
 # label: Monospace font
 # Used in the text editor that positions, search results or SGF files are
-# "exported" to.
-exportFont = Courier
+# "exported" to. For good results, this should be a 'monospace' font where
+# each letter takes the same amount of space, e.g., Courier.
+monospaceFont = Courier
 # editable
 # label: Font size
 # values: INT
-exportFontSize = 10
+monospaceFontSize = 10
 # editable
-# label: Font style
-# values: --, bold
-exportFontStyle = ""
-#
-# editable
-# label: Font size for guess mode
-# values: INT
-guessmodeFontSize = 16
+# label: Font weight
+# values: normal, bold
+monospaceFontWeight = normal
 #
 # section: Colors
 #
