Change default values of some options

--- a/kombilo/default.cfg
+++ b/kombilo/default.cfg
@@ -224,7 +224,7 @@ uppercaseLabels = True
 # editable
 # label: Search history as tab
 # values: BOOLEAN
-search_history_as_tab = True
+search_history_as_tab = False
 # editable
 # label: Use external SGF viewer
 # values: BOOLEAN
@@ -246,7 +246,7 @@ date_profile_from = 1960
 date_profile_to = 2016
 date_profile_chunk_size = 6
 statistics_by_date = False
-continuations_sort_crit = earliest
+continuations_sort_crit = total
 #
 # ------------- internal -------------------
 # viewer
