--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,6 +55,8 @@ install:
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
   - "%CMD_IN_ENV% pip install -r requirements.txt"
+  - ps: "ls \"C:/Libraries\""
+  - ps: "ls \"C:/Libraries/boost_1_62_0\""
 
 build_script:
   # Build the compiled extension
