--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,8 @@ install:
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
   - "%CMD_IN_ENV% pip install -r requirements.txt"
-  - ps: "ls \"C:/Python27-x64\""
+
+  - cd c:/Python27-x64/DLLs; lib /def:sqlite3.def /out:sqlite3.lib
   - ps: "ls \"C:/Python27-x64/DLLs\""
 
 build_script:
