--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,9 +13,9 @@ environment:
       PYTHON_VERSION: "2.7.x"
       PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.x"
-      PYTHON_ARCH: "64"
+    # - PYTHON: "C:\\Python27-x64"
+    #   PYTHON_VERSION: "2.7.x"
+    #   PYTHON_ARCH: "64"
 
 install:
   # If there is a newer build queued for the same PR, cancel this one.
@@ -55,14 +55,21 @@ install:
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
   - "%CMD_IN_ENV% pip install -r requirements.txt"
+  - "%CMD_IN_ENV% pip install PyInstaller==3.1.1"
+  # note: 3.2 is broken, see https://github.com/pyinstaller/pyinstaller/issues/1974
+
+  - "cinst innosetup"
 
 build_script:
   # Build the compiled extension
   - "%CMD_IN_ENV% python setup.py build"
   - "%CMD_IN_ENV% python setup.py bdist_wheel"
-  - "%CMD_IN_ENV% python setup.py bdist_wininst"
-  - "%CMD_IN_ENV% python setup.py bdist_msi"
+  # - "%CMD_IN_ENV% python setup.py bdist_wininst"
+  # - "%CMD_IN_ENV% python setup.py bdist_msi"
+
+  - %CMD_IN_ENV% pyinstaller.exe kombilo.spec
   - ps: "ls dist"
+  - ps: "ls dist\\kombilo"
 
 artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
