--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,7 +67,7 @@ build_script:
   # - "%CMD_IN_ENV% python setup.py bdist_wininst"
   # - "%CMD_IN_ENV% python setup.py bdist_msi"
 
-  - %CMD_IN_ENV% pyinstaller.exe kombilo.spec
+  - "%CMD_IN_ENV% pyinstaller.exe kombilo.spec"
   - ps: "ls dist"
   - ps: "ls dist\\kombilo"
 
