--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,12 +68,15 @@ build_script:
   # - "%CMD_IN_ENV% python setup.py bdist_msi"
 
   - "%CMD_IN_ENV% pyinstaller.exe kombilo.spec"
+  - "%CMD_IN_ENV% iscc kombilo.iss"
   - ps: "ls dist"
   - ps: "ls dist\\kombilo"
+  - ps: "ls installer"
 
 artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
-  - path: dist\*
+  - path: dist\*.*
+  - path: installer\*
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
