Try to find innosetup compiler ..., part 2

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,7 @@ install:
   - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
 
   - "cinst innosetup"
-  - ps: "ls \"C:/Program Files\""
-
+  - ps: "ls \"C:/Program Files (x86)\Inno Setup 5\""
   # Install Python (from the official .msi of http://python.org) and pip when
   # not already installed.
   - ps: if (-not(Test-Path($env:PYTHON))) { & appveyor\install.ps1 }
@@ -70,7 +69,7 @@ build_script:
   # - "%CMD_IN_ENV% python setup.py bdist_msi"
 
   - "%CMD_IN_ENV% pyinstaller.exe kombilo.spec"
-  - "%CMD_IN_ENV% iscc kombilo.iss"
+  - "%CMD_IN_ENV% \"C:\Program Files (x86)\Inno Setup 5\iscc.exe\" kombilo.iss"
   - ps: "ls dist"
   - ps: "ls dist\\kombilo"
   - ps: "ls installer"
