--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,8 +60,6 @@ install:
   - "%CMD_IN_ENV% pip install PyInstaller==3.1.1"
   # note: 3.2 is broken, see https://github.com/pyinstaller/pyinstaller/issues/1974
 
-  - curl -fsS -o "c:/projects/kombilo/kombilo/vcredist_x86.exe" "http://dl.u-go.net/buildwin/vcredist_x86.exe"
-  - ps: "ls c:/projects/kombilo/kombilo"
 
 
 build_script:
@@ -74,6 +72,7 @@ build_script:
   - "%CMD_IN_ENV% cp build\\lib.win32-2.7\\kombilo\\_libkombilo.pyd kombilo"
   - "%CMD_IN_ENV% pyinstaller.exe kombilo.spec"
 
+  - "%CMD_IN_ENV% curl -fsS -o vcredist_x86.exe  http://dl.u-go.net/buildwin/vcredist_x86.exe"
   - "%CMD_IN_ENV% \"C:\\Program Files (x86)\\Inno Setup 5\\iscc.exe\" kombilo.iss"
   - ps: "ls dist"
   - ps: "ls dist\\kombilo"
