Still some dll trouble

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,7 +73,8 @@ build_script:
   - "%CMD_IN_ENV% pyinstaller.exe kombilo.spec"
 
   - "%CMD_IN_ENV% curl -fsS -o c:/projects/kombilo/dist/kombilo/vcredist_x86.exe  http://dl.u-go.net/buildwin/vcredist_x86.exe"
-  - ps: "rm c:/projects/kombilo/dist/kombilo/ms*.dll"
+  # - ps: "rm c:/projects/kombilo/dist/kombilo/mf*.dll"
+  # - ps: "rm c:/projects/kombilo/dist/kombilo/ms*.dll"
   - ps: "ls c:/projects/kombilo/dist/kombilo"
   - "%CMD_IN_ENV% \"C:\\Program Files (x86)\\Inno Setup 5\\iscc.exe\" kombilo.iss"
   - ps: "ls dist"
