--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,7 +71,7 @@ build_script:
 
   - "%CMD_IN_ENV% cp build\\lib.win32-2.7\\kombilo\\_libkombilo.pyd kombilo"
   - ps: "ls c:/windows/winsxs/x86_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_ecdf8c290e547f39"
-  - "%CMD_IN_ENV% pyinstaller.exe -p c:/windows/winsxs/x86_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_ecdf8c290e547f39 kombilo.spec"
+  - "%CMD_IN_ENV% pyinstaller.exe -p c:\\windows\\winsxs\\x86_microsoft.vc90.openmp_1fc8b3b9a1e18e3b_9.0.21022.8_none_ecdf8c290e547f39 kombilo.spec"
   - "%CMD_IN_ENV% curl -fsS -o c:/projects/kombilo/dist/kombilo/vcredist_x86.exe  http://dl.u-go.net/buildwin/vcredist_x86.exe"
   # - ps: "rm c:/projects/kombilo/dist/kombilo/mf*.dll"
   # - ps: "rm c:/projects/kombilo/dist/kombilo/ms*.dll"
