Clean up/split pip requirements file

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,6 +32,7 @@ install:
 
   # Install the build dependencies of the project.
   - "%CMD_IN_ENV% pip install -r requirements.txt"
+  - "%CMD_IN_ENV% pip install wheel"
   - "%CMD_IN_ENV% pip install PyInstaller==3.1.1"
   # note: 3.2 is broken, see https://github.com/pyinstaller/pyinstaller/issues/1974
 
