--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,14 +32,15 @@ install:
 
   # Install the build dependencies of the project.
   - "%CMD_IN_ENV% pip install -r requirements.txt"
-  - "%CMD_IN_ENV% pip install wheel"
-  - "%CMD_IN_ENV% pip install PyInstaller==3.1.1"
-  # note: 3.2 is broken, see https://github.com/pyinstaller/pyinstaller/issues/1974
+  - "%CMD_IN_ENV% pip install -r requirements-build.txt"
 
 build_script:
   # in kombilo folder, license.rst exists only as a symlink, so need to copy the
   # real file to that location to be able to use it
   - "%CMD_IN_ENV% cp license.rst kombilo"
+
+  # compile mo files
+  - "%CMD_IN_ENV% pybabel compile -d kombilo/lang -D kombilo"
 
   - "%CMD_IN_ENV% python setup.py build"
   - "%CMD_IN_ENV% python setup.py bdist_wheel"  # note: the wheel also requires the dlls, notably vvcomp90.dll, which is not easily found automatically(?)
