--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -5,4 +5,5 @@ PyInstaller==3.1.0
 # 3.1.1 is broken, see
 # https://github.com/pyinstaller/pyinstaller/issues/1957
 # https://github.com/pyinstaller/pyinstaller/issues/1948
+setuptools==19.2
 fabric
